--- a/next-frontend/src/app/globals.css
+++ b/next-frontend/src/app/globals.css
@@ -4,18 +4,29 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #222336;
+    --foreground: #ffffff;
   }
+}
+
+html, body {
+  margin: 0;             
+  padding: 0;          
+  width: 100%;           
+  height: 100%;           
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;          
+  justify-content: center;
+  align-items: center;   
+  text-align: center;   
 }
